# quotactl

./: .gitignore  AGENTS.md  DESIGN.md  Makefile  QUICKSTART.md  README.md  conftest.py  download-dependencies.sh  example-config.yaml  install-offline.sh  pyproject.toml  rancher-config.yaml  requirements.txt
.github/workflows/: release.yml
scripts/: build-release.sh
src/quotactl/: __init__.py  __main__.py  cli.py  config.py  diff.py  executor.py  kubernetes_client.py  logging.py  models.py  planner.py  rancher_client.py  report.py
tests/: __init__.py
tests/integration/: __init__.py  test_rancher_integration.py
tests/unit/: __init__.py  test_config.py  test_diff.py  test_executor.py  test_kubernetes_client.py  test_models.py  test_planner.py  test_rancher_client.py  test_report.py
